--- a/breakout-pure-js/index.html
+++ b/breakout-pure-js/index.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>Breakout</title>
-        <style type="text/css" media="screen">
-          * { padding: 0; margin: 0 }
-          canvas { background: #eee; display: block; margin: 0 auto; }
-        </style>
+        <link rel="stylesheet" href="game.css" type="text/css" media="screen" />
+        <script src="game.js"></script>
     </head>
     <body>
         <canvas id="game-canvas"  width="480" height="320">
