Add correct phaser version and ball

--- a/breakout-with-phaser/index.html
+++ b/breakout-with-phaser/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Breakout</title>
         <link rel="stylesheet" href="game.css" type="text/css" media="screen" />
-        <script src="phaser.min.js"></script>
+        <script src="phaser.2.4.2.min.js"></script>
     </head>
     <body>
         <script src="game.js"></script>
